enum ThorNetworks {
    MAINNET = 'https://mainnet.vechain.org/',
    SOLONET = 'http://localhost:8669/',
    TESTNET = 'https://testnet.vechain.org/'
}

export { ThorNetworks };
